@startuml

title __DEMO's Class Diagram__\n

  namespace  {
    namespace om.example.demo {
      class com.example.demo.HelloApplication {
          {static} + main()
          + start()
      }
    }
  }
  

  namespace  {
    namespace om.example.demo {
      class com.example.demo.HelloController {
          + coinsCount : Label
          + view : ImageView
          + init()
          + initialize()
          + onPay()
          + onStart()
          + statusShow()
      }
    }
  }
  

  com.example.demo.HelloApplication -up-|> javafx.application.Application
  com.example.demo.HelloController .up.|> javafx.fxml.Initializable
  com.example.demo.HelloController o-- model.Player : player1
  com.example.demo.HelloController o-- model.ActionChain : action


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
